//
// Copyright (c) 2018
// Mainflux
//
// SPDX-License-Identifier: Apache-2.0
//

syntax = "proto3";

package mainflux;

import "google/protobuf/empty.proto";

service ThingsService {
    rpc CanAccess(AccessReq) returns (ThingID) {}
    rpc CanAccessByID(AccessByIDReq) returns (google.protobuf.Empty) {}
    rpc Identify(Token) returns (ThingID) {}
}

service UsersService {
    rpc Identify(Token) returns (UserID) {}
}

message AccessReq {
    string token = 1;
    string chanID = 2;
}

message ThingID {
    string value = 1;
}

message AccessByIDReq {
    string thingID = 1;
    string chanID = 2;
}

message Token {
    string value = 1;
}

message UserID {
    string value = 1;
}
